@@ -110,7 +110,11 @@ EOF
     ;;
   esac
 
-  load_kfreebsd_module ${kfreebsd_fs} false
+  if [ x${kfreebsd_fs} = xufs ]; then
+	load_kfreebsd_module ${kfreebsd_fs} true
+  else
+	load_kfreebsd_module ${kfreebsd_fs} false
+  fi
 
   cat << EOF
 	set kFreeBSD.vfs.root.mountfrom=${kfreebsd_fs}:${kfreebsd_device}
